namespace/fileshare/syncthing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  namespace: fileshare
  labels:
    app.kubernetes.io/name: syncthing
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: syncthing
  template:
    metadata:
      labels:
        app.kubernetes.io/name: syncthing
        app.kubernetes.io/managed-by: flux
    spec:
      runtimeClassName: youki
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      automountServiceAccountToken: false
      containers:
        - name: syncthing
        # renovate: datasource=docker depName=lscr.io/linuxserver/syncthing
          image: lscr.io/linuxserver/syncthing:latest@sha256:f9494b8b82fa7ccb3e21cfce360faf22b44394c07ad677bcce70667b7079b9ed
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8384
              protocol: TCP
            - containerPort: 22000
              protocol: TCP
            - containerPort: 22000
              protocol: UDP
            - containerPort: 21027
              protocol: UDP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: fileshare
              mountPath: /data
              subPath: fileshare
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: syncthing-config
        - name: fileshare
          persistentVolumeClaim:
            claimName: fileshare
