namespace/fileshare/syncthing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-ui
  namespace: fileshare
spec:
  selector:
    app: syncthing
  ports:
    - port: 8384
      targetPort: 8384
      protocol: TCP
      name: syncthing-ui
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  namespace: fileshare
spec:
  selector:
    app: syncthing
  ports:
    - port: 22000
      targetPort: 22000
      protocol: TCP
      name: syncthing-tcp
    - port: 22000
      targetPort: 22000
      protocol: UDP
      name: syncthing-udp
    - port: 21027
      targetPort: 21027
      protocol: UDP
      name: syncthing-discovery
  type: LoadBalancer
