namespace/fileshare/syncthing/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: syncthing-https
  namespace: fileshare
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`syncthing.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: authentik
          namespace: traefik
      services:
        - name: syncthing
          port: 8384
  tls:
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: syncthing-http
  namespace: fileshare
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`syncthing.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: redirect-https
          namespace: traefik
      services:
        - name: syncthing
          port: 8384
